[#68923142] Fix - Homepage: content too close to main navigation

--- a/frontend/app/styles/pages/_blog.scss
+++ b/frontend/app/styles/pages/_blog.scss
@@ -1,5 +1,6 @@
 .article-header-image {
   color: white;
+  margin-top: 20px;
   margin-bottom: 0;
   background-color: #000;
   .image {
