--- a/www/assets/styles/wysiwyg.css
+++ b/www/assets/styles/wysiwyg.css
@@ -2907,6 +2907,7 @@ pagination {
 
 .article-header-image {
   color: white;
+  margin-top: 20px;
   margin-bottom: 0;
   background-color: #000; }
   .article-header-image .image {
